[gd_scene load_steps=3 format=3 uid="uid://qveyavci77o0"]

[ext_resource type="Script" path="res://ui/menus/layouts/components/new_game_slot.gd" id="1_dsjbc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bmka8"]
region = Rect2(32, 16, 16, 16)

[node name="NewGameSlot" type="Panel"]
custom_minimum_size = Vector2(450, 150)
script = ExtResource("1_dsjbc")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="NewGameSlotButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
focus_mode = 0
texture_normal = SubResource("AtlasTexture_bmka8")
ignore_texture_size = true
stretch_mode = 5

[node name="NewGameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CREATE_NEW_GAME_SLOT"
